--- a/myndktest/src/main/res/layout/activity_with_shared_element.xml
+++ b/myndktest/src/main/res/layout/activity_with_shared_element.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_with_shared_element"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.demo.android.myndktest.MainActivity">
+    tools:context="com.demo.android.myndktest.transaition.WithSharedElementActivity">
 
-    <TextView
-        android:id="@+id/tv_text"
+    <ImageView
+        android:id="@+id/iv_share_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:layout_centerInParent="true"
+        android:src="@mipmap/haizei_shanzhi"/>
 
-    <android.support.v7.widget.AppCompatButton
-        android:id="@+id/btn_begin"
-        android:layout_below="@+id/tv_text"
-        android:layout_marginTop="20dp"
+    <TextView
+        android:id="@+id/tv_share_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="开始"/>
-
-    
+        android:text="fsdffsdfsd"
+        android:layout_below="@+id/iv_share_1"/>
 </RelativeLayout>
